--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<!-- this part defines the elements that will be rendered -->
 	<div>
-		<table>
+		<table id="train-container">
 			<tr>
 				<th>Train Name</th>
 				<th>Train No.</th>
@@ -17,22 +17,18 @@
 				<th>Train To</th>
 			</tr>
 		</table>
-
-		<div id="train-container"></div>
 	</div>
 
 
 	<!-- main train template starts from here -->
 	<script id="train-template" type="text/x-handlebars-template">
 		{{#each train}}
-		<table>
 			<tr>
-				<td align="left">{{name}}</td>
-				<td align="left">{{number}}</td>
+				<td>{{name}}</td>
+				<td>{{number}}</td>
 				<td>{{from.name}}</td>
 				<td>{{to.name}}</td>
 			</tr>
-		</table>
 		{{/each}}
 	</script>
 
